--- a/games/ceferino/Makefile
+++ b/games/ceferino/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	ceferino
-# Date created:		2006-01-11
-# Whom:			Jose Alonso Cardenas Marquez <acardenas@bsd.org.pe>
-#
+# Created by: Jose Alonso Cardenas Marquez <acardenas@bsd.org.pe>
 # $FreeBSD$
-#
 
 PORTNAME=	ceferino
 PORTVERSION=	0.97.8
@@ -22,17 +18,17 @@ LDFLAGS+=	-L${LOCALBASE}/lib ${PTHREAD}
 
 CEFEDIRS=	ima music levels sounds
 
-OPTIONS=	NLS "Native Language Support"	on
+OPTIONS_DEFINE=	NLS DOCS
 
-.include <bsd.port.pre.mk>
+.include <bsd.port.options.mk>
 
-.if defined(WITHOUT_NLS)
-CONFIGURE_ARGS+=	--disable-nls
-PLIST_SUB+=	NLS="@comment "
-.else
-USE_GETTEXT=	yes
+.if ${PORT_OPTIONS:MNLS}
+USES+=	gettext
 PLIST_SUB+=	NLS=""
 FLAG_NLS=	true
+.else
+CONFIGURE_ARGS+=	--disable-nls
+PLIST_SUB+=	NLS="@comment "
 .endif
 
 post-extract:
@@ -55,10 +51,10 @@ do-install:
 .endif
 
 post-install:
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	@${MKDIR} ${DOCSDIR}
 	@cd ${WRKSRC} && \
 		${INSTALL_DATA} AUTHORS ChangeLog README ${DOCSDIR}
 .endif
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
