HTTPS client for httplib and urllib2 based on PyOpenSSL.
WWW: http://ndg-security.ceda.ac.uk/wiki/ndg_httpsclient


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316625 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/Makefile
+++ b/net/Makefile
@@ -912,6 +912,7 @@
     SUBDIR += py-medusa
     SUBDIR += py-miniupnpc
     SUBDIR += py-msrplib
+    SUBDIR += py-ndg_httpsclient
     SUBDIR += py-netaddr
     SUBDIR += py-netifaces
     SUBDIR += py-netstring
