The KoreLogic Expression Language Library is a C library that provides a simple expression language that can be embedded in other programs. This library does not implement a full programming language, but rather a simpler expression language called KL-EL that is designed to provide arithmetic and logic operations useful in situations where embedding a full programming language would be overkill. KL-EL expressions have access to a full set of arithmetic and logic operations, and they can access functions and variables exported from the embedding program. Unlike most other languages of its kind, KL-EL is statically and strongly typed, which helps ensure that expressions are valid before they are executed. The embedding API is designed to be easy to use, and the library itself is designed to be very small.
WWW: http://sourceforge.net/projects/libklel/

PR:		ports/177737
Submitted by:	klm <klm@uidzero.org>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316626 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1013,6 +1013,7 @@
     SUBDIR += libjson++
     SUBDIR += libk8055
     SUBDIR += libkgapi
+    SUBDIR += libklel
     SUBDIR += libkolab
     SUBDIR += liblangtag
     SUBDIR += liblas
