New port: sysutils/racktables:
Racktables is a nifty and robust solution for datacenter and server room asset
management. It helps document hardware assets, network addresses, space in
racks, networks configuration and much much more!

WWW: http://www.racktables.org/

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316630 35697150-7ecd-e111-bb59-0022644237b5

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -754,6 +754,7 @@
     SUBDIR += quicksynergy
     SUBDIR += qzeitgeist
     SUBDIR += radeontool
+    SUBDIR += racktables
     SUBDIR += radmind
     SUBDIR += raincoat
     SUBDIR += rclean
