In os_list.txt, move all references to FreeBSD at the beginning.
The oschooser.pl script is called by setup.sh, and it uses os_list.txt
to detect the operating system.

Conditions in os_list.txt are evaluated sequentially until a match
is found. It may happen that a Linux-only condition matches before
FreeBSD; for example, if the directory /usr/portage exists then
webmin will detect FreeBSD as Gentoo Linux.


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316633 35697150-7ecd-e111-bb59-0022644237b5

--- a/sysutils/webmin/Makefile
+++ b/sysutils/webmin/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	webmin
 PORTVERSION=	1.620
+PORTREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	http://download.webmin.com/updates/:up \
 		SF/webadmin/${PORTNAME}/${PORTVERSION}:sf \
@@ -54,6 +55,8 @@ post-patch:
 	@${FIND} ${WRKSRC} -name "*.orig" -delete
 	@${FIND} ${WRKSRC} -name "*.bak" -delete
 	@${FIND} ${WRKSRC} -name "*.pyc" -delete
+
+	@${PRINTF} "g/^FreeBSD/m0\nwq\n" | ex ${WRKSRC}/os_list.txt
 
 do-build:
 	@${CC} ${CFLAGS} -o ${WRKSRC}/mount/freebsd-mounts-7 ${WRKSRC}/mount/freebsd-mounts-7.c
