Update to r316538 and drop support for 7.x.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316635 35697150-7ecd-e111-bb59-0022644237b5

--- a/java/bootstrap-openjdk/Makefile
+++ b/java/bootstrap-openjdk/Makefile
@@ -3,8 +3,7 @@
 PORTNAME=	${JDK_NAME}
 PORTVERSION=	${DISTVERSION_${ARCH}}
 CATEGORIES=	java devel
-MASTER_SITES=	${MASTER_SITE_LOCAL} \
-		http://people.freebsd.org/~jkim/
+MASTER_SITES=	${MASTER_SITE_LOCAL}
 MASTER_SITE_SUBDIR=	jkim
 PKGNAMEPREFIX=	bootstrap-
 DISTNAME=	${JDK_PORT}-${ARCH}-${PORTVERSION}
@@ -19,8 +18,8 @@ RUN_DEPENDS=	${LOCALBASE}/share/java/zi:${PORTSDIR}/java/java-zoneinfo
 ONLY_FOR_ARCH=	amd64 i386
 
 DISTINFO_FILE=	${.CURDIR}/distinfo.${ARCH}
-DISTVERSION_amd64=	r306764
-DISTVERSION_i386=	r306764
+DISTVERSION_amd64=	r316538
+DISTVERSION_i386=	r316538
 
 JDK_NAME=	openjdk
 JDK_PORT=	openjdk6
@@ -35,8 +34,8 @@ INSTALLDIR=	${PREFIX}/${JDK_ROOT}
 
 .include <bsd.port.pre.mk>
 
-.if ${OSVERSION} >= 800105
-RUN_DEPENDS+=	${LOCALBASE}/lib/compat/libz.so.4:${PORTSDIR}/misc/compat7x
+.if ${OSVERSION} >= 900010
+RUN_DEPENDS+=	${LOCALBASE}/lib/compat/libz.so.5:${PORTSDIR}/misc/compat8x
 .endif
 
 .if ${ARCH} == "i386"
