--- a/java/icedtea-web/files/patch-Makefile.in
+++ b/java/icedtea-web/files/patch-Makefile.in
@@ -1,6 +1,6 @@
---- Makefile.in.orig	2012-11-01 12:51:47.732805000 -0400
-+++ Makefile.in	2012-11-07 18:38:48.000000000 -0500
-@@ -257,14 +257,14 @@
+--- Makefile.in.orig	2013-04-11 12:15:37.816212000 -0400
++++ Makefile.in	2013-04-26 18:51:02.000000000 -0400
+@@ -256,14 +256,14 @@
  #end of exported autoconf copies
  
  # binary names
@@ -17,7 +17,7 @@
    -e 's|[@]ITWEB_SETTINGS_BIN_LOCATION[@]|$(bindir)/$(itweb_settings)|g' \
    -e 's|[@]JAVA[@]|$(JAVA)|g' \
    -e 's|[@]JRE[@]|$(SYSTEM_JRE_DIR)|g'
-@@ -746,8 +746,8 @@
+@@ -743,8 +743,8 @@
  # Top-Level Targets
  # =================
  
@@ -28,7 +28,7 @@
  
  check-local: $(RHINO_TESTS) $(JUNIT_TESTS)
  
-@@ -767,24 +767,26 @@
+@@ -764,24 +764,26 @@
  @ENABLE_PLUGIN_TRUE@	${INSTALL_PROGRAM} $(PLUGIN_DIR)/$(BUILT_PLUGIN_LIBRARY) $(DESTDIR)$(libdir)
  @ENABLE_PLUGIN_TRUE@	${INSTALL_DATA} $(abs_top_builddir)/liveconnect/lib/classes.jar $(DESTDIR)$(datadir)/$(PACKAGE_NAME)/plugin.jar
  	${INSTALL_DATA} $(NETX_DIR)/lib/classes.jar $(DESTDIR)$(datadir)/$(PACKAGE_NAME)/netx.jar
@@ -60,7 +60,7 @@
  @ENABLE_DOCS_TRUE@@ENABLE_PLUGIN_TRUE@	 done)
  
  uninstall-local:
-@@ -793,8 +795,8 @@
+@@ -790,8 +792,8 @@
  	rm -f $(DESTDIR)$(datadir)/$(PACKAGE_NAME)/netx.jar
  	rm -f $(DESTDIR)$(datadir)/$(PACKAGE_NAME)/about.jnlp
  	rm -f $(DESTDIR)$(datadir)/$(PACKAGE_NAME)/about.jar
@@ -71,7 +71,7 @@
  	rm -f $(DESTDIR)$(bindir)/$(itweb_settings)
  	rm -rf $(DESTDIR)$(htmldir)
  
-@@ -884,8 +886,8 @@
+@@ -879,8 +881,8 @@
  
  netx-source-files.txt:
  	find $(NETX_SRCDIR) -name '*.java' | sort > $@
@@ -82,7 +82,7 @@
  
  stamps/netx.stamp: netx-source-files.txt stamps/bootstrap-directory.stamp
  	mkdir -p $(NETX_DIR)
-@@ -897,7 +899,8 @@
+@@ -892,7 +894,8 @@
  	(cd $(NETX_RESOURCE_DIR); \
  	 for files in $$(find . -type f); \
  	 do \
@@ -92,7 +92,7 @@
  	   $(NETX_DIR)/net/sourceforge/jnlp/resources/$${files}; \
  	 done)
  	cp -a $(NETX_SRCDIR)/net/sourceforge/jnlp/runtime/pac-funcs.js \
-@@ -925,10 +928,10 @@
+@@ -920,10 +923,10 @@
  	rm -f stamps/netx.stamp
  
  clean-desktop-files:
@@ -105,7 +105,7 @@
  extra-source-files.txt:
  	find $(abs_top_srcdir)/extra -name '*.java' | sort > $@
  
-@@ -940,7 +943,8 @@
+@@ -935,7 +938,8 @@
  	(cd $(NETX_EXTRA_DIR); \
  	 for files in $$(find . -type f); \
  	 do \
@@ -115,7 +115,7 @@
  	   $(NETX_EXTRA_DIST_DIR)/$${files}; \
  	 done)
  	mkdir -p stamps
-@@ -954,7 +958,7 @@
+@@ -949,7 +953,7 @@
  extra-lib/about.jar: stamps/extra-class-files.stamp
  	$(BOOT_DIR)/bin/jar cf $@ -C extra-lib net ;
  
@@ -124,7 +124,7 @@
  	mkdir -p launcher.build
  	$(edit_launcher_script) < $< > $@
  
-@@ -963,14 +967,14 @@
+@@ -958,14 +962,14 @@
  	$(edit_launcher_script) < $< > $@
  
  clean-launchers:
@@ -142,7 +142,7 @@
  
  itweb-settings.desktop: $(srcdir)/itweb-settings.desktop.in
  	sed "s#PATH_TO_ITWEB_SETTINGS#$(bindir)/$(itweb_settings)#" \
-@@ -1024,7 +1028,7 @@
+@@ -1019,7 +1023,7 @@
  	fi
  
  stamps/check-pac-functions.stamp: stamps/bootstrap-directory.stamp
@@ -151,25 +151,34 @@
  	  $$(readlink -f $(abs_top_srcdir)/netx/net/sourceforge/jnlp/runtime/pac-funcs.js) ; \
  	mkdir -p stamps && \
  	touch $@
-@@ -1079,7 +1082,7 @@
+@@ -1074,7 +1078,7 @@
  	      notSrcFiles=`find . -mindepth 1 -type f \! -name "*.java" | sed "s/.\/*//"` ; \
- 	      $(BOOT_DIR)/bin/javac -cp $(NETX_DIR)/lib/classes.jar -d "$(JNLP_TESTS_DIR)/$$dir/" $$srcFiles ; \
+ 	      $(BOOT_DIR)/bin/javac -cp $(NETX_DIR)/lib/classes.jar:$(abs_top_builddir)/liveconnect -d "$(REPRODUCERS_BUILD_DIR)/$$dir/" $$srcFiles ; \
  	      if [ -n "$$notSrcFiles" ] ; then \
--	        cp -R --parents $$notSrcFiles "$(JNLP_TESTS_DIR)/$$dir/" ; \
-+		tar -c -f - "$$notSrcFiles" | tar -x -f - -C "$(JNLP_TESTS_DIR)/$$dir/" ; \
+-	        cp -R --parents $$notSrcFiles "$(REPRODUCERS_BUILD_DIR)/$$dir/" ; \
++	        tar -c -f - "$$notSrcFiles" | tar -x -f - -C "$(REPRODUCERS_BUILD_DIR)/$$dir/" ; \
  	      fi ; \
- 	      cd "$(JNLP_TESTS_DIR)/$$dir/" ; \
+ 	      cd "$(REPRODUCERS_BUILD_DIR)/$$dir/" ; \
  	      if [ -f $(META_MANIFEST) ]; \
-@@ -1232,7 +1234,7 @@
+@@ -1129,7 +1133,7 @@
+ 	      path="`dirname $$slashed_dir`" ; \
+ 	      file="`basename $$slashed_dir`.jar" ; \
+ 	      echo "copying $$dir.jar to $$path as $$file" ; \
+-	      mkdir --parents $$path ; \
++	      mkdir -p $$path ; \
+ 	      cp $$dir".jar" "$$path"/"$$file" ; \
+ 	    fi ; \
+ 	  done ; \
+@@ -1228,7 +1232,7 @@
  	whiteListed=`cat $(REPRODUCERS_CLASS_WHITELIST)`; \
- 	cd $(JNLP_TESTS_ENGINE_TESTS_DIR) ; \
+ 	cd $(TEST_EXTENSIONS_TESTS_DIR) ; \
  	class_names= ; \
 -	for test in `find -type f` ; do \
 +	for test in `find . -type f` ; do \
  	  class_name=`echo $$test | sed -e 's|\.class$$||' -e 's|^\./||'` ; \
  	  class_name=`echo $$class_name | sed -e 's|/|.|g' ` ; \
  	  INLCUDE="NO" ; \
-@@ -1416,7 +1416,7 @@
+@@ -1412,7 +1416,7 @@
  $(UNIT_CLASS_NAMES):
  	cd $(NETX_UNIT_TEST_DIR) ; \
  	class_names= ; \
@@ -178,7 +187,7 @@
  	  class_name=`echo $$test | sed -e 's|\.class$$||' -e 's|^\./||'` ; \
  	  class_name=`echo $$class_name | sed -e 's|/|.|g' ` ; \
  	  class_names="$$class_names $$class_name" ; \
-@@ -1427,10 +1427,7 @@
+@@ -1423,10 +1427,7 @@
   $(TESTS_DIR)/$(REPORT_STYLES_DIRNAME)  $(UNIT_CLASS_NAMES)
  	filename=" " ; \
  	cd $(NETX_UNIT_TEST_SRCDIR) ; \
@@ -189,8 +198,8 @@
 +	tar -c -f - `find . -type f \! -iname "*.java"` | tar -x -f - -C $(NETX_UNIT_TEST_DIR) ; \
  	cd $(NETX_UNIT_TEST_DIR) ; \
  	class_names=`cat $(UNIT_CLASS_NAMES)` ; \
- 	CLASSPATH=$(NETX_DIR)/lib/classes.jar:$(JUNIT_JAR):$(JUNIT_RUNNER_JAR):$(JNLP_TESTS_ENGINE_DIR):. \
-@@ -1686,9 +1683,7 @@
+ 	CLASSPATH=$(NETX_DIR)/lib/classes.jar:$(JUNIT_JAR):$(JUNIT_RUNNER_JAR):$(TEST_EXTENSIONS_DIR):. \
+@@ -1684,9 +1685,7 @@
  @ENABLE_PLUGIN_TRUE@	 $(PLUGIN_TEST_SRCS) ;
  @ENABLE_PLUGIN_TRUE@	$(BOOT_DIR)/bin/jar cf plugin/tests/LiveConnect/PluginTest.jar \
  @ENABLE_PLUGIN_TRUE@	  plugin/tests/LiveConnect/*.class ;
