- Add new port: devel/R-cran-gtools
  Various R programming tools

  WWW: http://cran.r-project.org/web/packages/gtools/


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316644 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -19,6 +19,7 @@
     SUBDIR += R-cran-gbm
     SUBDIR += R-cran-glmnet
     SUBDIR += R-cran-gsubfn
+    SUBDIR += R-cran-gtools
     SUBDIR += R-cran-iterators
     SUBDIR += R-cran-itertools
     SUBDIR += R-cran-memoise
