--- a/net/p5-IO-Socket-IP/Makefile
+++ b/net/p5-IO-Socket-IP/Makefile
@@ -2,13 +2,13 @@
 # $FreeBSD$
 
 PORTNAME=	IO-Socket-IP
-PORTVERSION=	0.20
+PORTVERSION=	0.21
 CATEGORIES=	net ipv6 perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	sunpoet@FreeBSD.org
-COMMENT=	A drop-in replacement for IO::Socket::INET supporting IPv4 and IPv6
+COMMENT=	Drop-in replacement for IO::Socket::INET supporting IPv4 and IPv6
 
 LICENSE=	ART10 GPLv1
 LICENSE_COMB=	dual
